[package]
name = "google-rkp-sw"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
cmac = "0.7"
configparser = "3"
ed25519-dalek = "2"
hex = "0.4"
hkdf = "0.12"
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
thiserror = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
x509-parser = "0.16"
